# novelaid-editor-next

./: .gitignore  README.md  index.html  novelaid-editor-next.code-workspace  package-lock.json  package.json
doc/.novelaid/: config.json
doc/dev/: アプリケーション仕様.md  バックエンド仕様.md
doc/猫モフApps/: 00_はじめに.md  01_最初の一歩.md  02_プロジェクト選択  02_プロジェクト選択.md  03_.md  03_表示テーマ.md  04_ファイル一覧.md  05_エディター.md  06_実行ファイルの作成.md  07_Appを見てみよう.md  08_ファイルの種類.md  08_ファイルの種類とアイコン.md  09_バックエンド.md  10_ドキュメントエリア.md  10_プラグイン.md  11_novelaid-fs.md  12_バージョン.md  13_マークダウン.md  20_プラグイン.md  22_バージョン.md  index.md
docs/dev/: AI関連仕様.md  TODO.md  アプリケーション仕様.md
src/: App.css  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DocumentIcon.tsx  DocumentPane.css  DocumentPane.tsx  (+14 more)
tauri-plugin-novelaid-fs/: Cargo.toml  README.md  build.rs  error.txt  package.json
tauri-plugin-novelaid-fs/guest-js/: index.ts  models.ts
tauri-plugin-novelaid-fs/permissions/: default.toml
tauri-plugin-novelaid-fs/permissions/autogenerated/: reference.md
tauri-plugin-novelaid-fs/permissions/autogenerated/commands/: create_directory.toml  get_directory_type.toml  get_document_type.toml  get_metadata_cache.toml  get_project_directory.toml  read_directory.toml  read_document.toml  scan_project_metadata.toml  set_project_directory.toml  write_document.toml
tauri-plugin-novelaid-fs/permissions/schemas/: schema.json
tauri-plugin-novelaid-fs/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+48 files in other folders)
