[package]
name = "tauri-plugin-novelaid-fs"
version = "0.2.0"
authors = [ "Mizuki Mituha" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-novelaid-fs"

[dependencies]
tauri = { version = "2.10.0" }
serde = "1.0"
thiserror = "2"
ts-rs = "12.0"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
